# fastapi_clicker_backend

./: .gitignore  Dockerfile  README.md  commands.md  pyproject.toml
.github/workflows/: deploy.yaml
src/: .dev.env  main.py  redis_queue.py  settings.py
src/core/: base_dao.py  database.py  dependencies.py  enums.py  exceptions.py  models.py  schemas.py
src/game_api/: dao.py  db_functions.py  repeat_tasks.py  tg_payment.py  utils.py
src/game_api/routes/: stars_payment_routes.py  user_routes.py
src/game_api/schemas/: auth_schemas.py  stars_payment_schemas.py  user_referral_schemas.py  user_schemas.py
src/game_api/services/: auth_service.py  stars_payment_service.py  user_service.py
src/telegram/: bot.py
src/telegram/handlers/: commands.py  payments.py
src/telegram/keyboards/: base.py
